Update locale file

--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -17,13 +17,13 @@ ja:
       unconfirmed: 続行するにはメールアドレスを確認する必要があります。
     mailer:
       confirmation_instructions:
-        subject: 'Mastodon: メールアドレスの確認'
+        subject: 'Hearthtodon: メールアドレスの確認'
       password_change:
-        subject: 'Mastodon: パスワードが変更されました'
+        subject: 'Hearthtodon: パスワードが変更されました'
       reset_password_instructions:
-        subject: 'Mastodon: パスワード再発行'
+        subject: 'Hearthtodon: パスワード再発行'
       unlock_instructions:
-        subject: 'Mastodon: アカウントのロックの解除'
+        subject: 'Hearthtodon: アカウントのロックの解除'
     omniauth_callbacks:
       failure: '%{reason}によって%{kind}からのアクセスを認証できませんでした。'
       success: '%{kind}からのアクセスは正常に認証されました。'
@@ -35,7 +35,7 @@ ja:
       updated_not_active: パスワードは正常に更新されました。
     registrations:
       destroyed: アカウントの作成はキャンセルされました。またのご利用をお待ちしています。
-      signed_up: アカウントの作成が完了しました。Mastodonへようこそ！
+      signed_up: アカウントの作成が完了しました。Hearthtodonへようこそ！
       signed_up_but_inactive: アカウントの作成が完了しました。しかし、アカウントが有効化されていないためログインできませんでした。
       signed_up_but_locked: アカウントの作成が完了しました。しかし、アカウントがロックされているためログインできませんでした。
       signed_up_but_unconfirmed: メールアドレスの確認用のリンクが入力したメールアドレスに送信されました。メール内のリンクをクリックしてアカウントを有効化してください。
