--- a/app/javascript/mastodon/locales/ja.json
+++ b/app/javascript/mastodon/locales/ja.json
@@ -47,7 +47,7 @@
   "compose_form.lock_disclaimer": "あなたのアカウントは{locked}になっていません。誰でもあなたをフォローすることができ、フォロワー限定の投稿を見ることができます。",
   "compose_form.lock_disclaimer.lock": "非公開",
   "compose_form.placeholder": "今なにしてる？",
-  "compose_form.privacy_disclaimer": "あなたの非公開トゥートは返信先ユーザーが所属する{domains}に送信されます。{domainsCount, plural, one {このサーバー} other {これらのサーバー}}は信頼できますか？　投稿のプライバシー保護はMastodonサーバー内でのみ有効です。{domains}がMastodonインスタンスでない場合、あなたの投稿がプライベートなものとして扱われず、ブーストされたり予期しないユーザーに見られる可能性があります。",
+  "compose_form.privacy_disclaimer": "あなたの非公開トゥートは返信先ユーザーが所属する{domains}に送信されます。{domainsCount, plural, one {このサーバー} other {これらのサーバー}}は信頼できますか？　投稿のプライバシー保護はHearthtodonサーバー内でのみ有効です。{domains}がHearthtodonインスタンスでない場合、あなたの投稿がプライベートなものとして扱われず、ブーストされたり予期しないユーザーに見られる可能性があります。",
   "compose_form.publish": "トゥート",
   "compose_form.publish_loud": "{publish}！",
   "compose_form.sensitive": "メディアを閲覧注意としてマークする",
@@ -130,17 +130,17 @@
   "notifications.column_settings.sound": "通知音を再生",
   "onboarding.done": "完了",
   "onboarding.next": "次へ",
-  "onboarding.page_five.public_timelines": "連合タイムラインでは{domain}の人がフォローしているMastodon全体での公開投稿を表示します。同じくローカルタイムラインでは{domain}のみの公開投稿を表示します。",
+  "onboarding.page_five.public_timelines": "連合タイムラインでは{domain}の人がフォローしているHearthtodon全体での公開投稿を表示します。同じくローカルタイムラインでは{domain}のみの公開投稿を表示します。",
   "onboarding.page_four.home": "「ホーム」タイムラインではあなたがフォローしている人の投稿を表示します。",
   "onboarding.page_four.notifications": "「通知」ではあなたへの他の人からの関わりを表示します。",
-  "onboarding.page_one.federation": "Mastodonは誰でも参加できるSNSです。",
-  "onboarding.page_one.handle": "あなたは今数あるMastodonインスタンスの1つである{domain}にいます。あなたのフルハンドルは{handle}です。",
-  "onboarding.page_one.welcome": "Mastodonへようこそ！",
+  "onboarding.page_one.federation": "Hearthtodonは誰でも参加できるハースストーンコミュニティです。",
+  "onboarding.page_one.handle": "あなたのフルハンドルは{handle}です。",
+  "onboarding.page_one.welcome": "Hearthtodonへようこそ！",
   "onboarding.page_six.admin": "あなたのインスタンスの管理者は{admin}です。",
   "onboarding.page_six.almost_done": "以上です。",
-  "onboarding.page_six.appetoot": "ボナペトゥート！",
+  "onboarding.page_six.appetoot": "ハーハッハッハ！踊ろうぜー！",
   "onboarding.page_six.apps_available": "iOS、Androidあるいは他のプラットフォームで使える{apps}があります。",
-  "onboarding.page_six.github": "MastodonはOSSです。バグ報告や機能要望あるいは貢献を{github}から行なえます。",
+  "onboarding.page_six.github": "Hearthtodonはみんなで作り上げるコミュニティです。利用規約を守って利用しましょう",
   "onboarding.page_six.guidelines": "コミュニティガイドライン",
   "onboarding.page_six.read_guidelines": "{guidelines}を読むことを忘れないようにしてください。",
   "onboarding.page_six.various_app": "様々なモバイルアプリ",
