--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -28,7 +28,7 @@ ja:
       within_reach_body: デベロッパーフレンドリーな API により実現された、iOS や Android、その他様々なプラットフォームのためのアプリでどこでも友人とやりとりできます。
       within_reach_title: いつでも身近に
     find_another_instance: 他のインスタンスを探す
-    generic_description: "ハストドンはMastodonを使用したハースユーザーのためのTwitterライクなSNSです"
+    generic_description: "ハストドンはMastodonを使用したハースストーンユーザーのためのTwitterライクなSNSです"
     hosted_on: ハースストーンをもっと楽しくする
     learn_more: もっと詳しく
     other_instances: 他のインスタンス
