--- a/app/javascript/mastodon/locales/ja.json
+++ b/app/javascript/mastodon/locales/ja.json
@@ -88,7 +88,7 @@
   "getting_started.appsshort": "アプリ",
   "getting_started.faq": "よくある質問",
   "getting_started.heading": "スタート",
-  "getting_started.open_source_notice": "Hearthtodon.com へようこそ",
+  "getting_started.open_source_notice": "",
   "getting_started.userguide": "ユーザーガイド",
   "home.column_settings.advanced": "上級者向け",
   "home.column_settings.basic": "基本設定",
