--- a/app/javascript/mastodon/locales/ja.json
+++ b/app/javascript/mastodon/locales/ja.json
@@ -34,7 +34,7 @@
   "column.mutes": "ミュートしたユーザー",
   "column.notifications": "通知",
   "column.public": "連合タイムライン",
-  "column.pins": "固定されたツイート",
+  "column.pins": "固定されたトゥート",
   "column_back_button.label": "戻る",
   "column_header.hide_settings": "設定を隠す",
   "column_header.moveLeft_settings": "カラムを左に移動する",
@@ -47,8 +47,8 @@
   "compose_form.lock_disclaimer": "あなたのアカウントは{locked}になっていません。誰でもあなたをフォローすることができ、フォロワー限定の投稿を見ることができます。",
   "compose_form.lock_disclaimer.lock": "非公開",
   "compose_form.placeholder": "今なにしてる？",
-  "compose_form.privacy_disclaimer": "あなたの非公開ツイートは返信先ユーザーが所属する{domains}に送信されます。{domainsCount, plural, one {このサーバー} other {これらのサーバー}}は信頼できますか？　投稿のプライバシー保護はHearthtodonサーバー内でのみ有効です。{domains}がHearthtodonインスタンスでない場合、あなたの投稿がプライベートなものとして扱われず、ブーストされたり予期しないユーザーに見られる可能性があります。",
-  "compose_form.publish": "ツイート",
+  "compose_form.privacy_disclaimer": "あなたの非公開トゥートは返信先ユーザーが所属する{domains}に送信されます。{domainsCount, plural, one {このサーバー} other {これらのサーバー}}は信頼できますか？　投稿のプライバシー保護はHearthtodonサーバー内でのみ有効です。{domains}がHearthtodonインスタンスでない場合、あなたの投稿がプライベートなものとして扱われず、ブーストされたり予期しないユーザーに見られる可能性があります。",
+  "compose_form.publish": "トゥート",
   "compose_form.publish_loud": "{publish}",
   "compose_form.sensitive": "メディアを閲覧注意としてマークする",
   "compose_form.spoiler": "テキストを隠す",
@@ -88,7 +88,7 @@
   "getting_started.appsshort": "アプリ",
   "getting_started.faq": "よくある質問",
   "getting_started.heading": "スタート",
-  "getting_started.open_source_notice": "",
+  "getting_started.open_source_notice": " ",
   "getting_started.userguide": "ユーザーガイド",
   "home.column_settings.advanced": "上級者向け",
   "home.column_settings.basic": "基本設定",
@@ -112,11 +112,11 @@
   "navigation_bar.mutes": "ミュートしたユーザー",
   "navigation_bar.preferences": "ユーザー設定",
   "navigation_bar.public_timeline": "連合タイムライン",
-  "navigation_bar.pins": "固定されたツイート",
-  "notification.favourite": "{name}さんがあなたのツイートをお気に入りに登録しました",
+  "navigation_bar.pins": "固定されたトゥート",
+  "notification.favourite": "{name}さんがあなたのトゥートをお気に入りに登録しました",
   "notification.follow": "{name}さんにフォローされました",
   "notification.mention": "{name}さんがあなたに返信しました",
-  "notification.reblog": "{name}さんがあなたのツイートをブーストしました",
+  "notification.reblog": "{name}さんがあなたのトゥートをブーストしました",
   "notifications.clear": "通知を消去",
   "notifications.clear_confirmation": "本当に通知を消去しますか？",
   "notifications.column_settings.alert": "デスクトップ通知",
